fixed bug with sidebar stuck on expanded and accordion mismatched animation

--- a/vivaldi.css
+++ b/vivaldi.css
@@ -4,6 +4,7 @@
 	--tabbar-spacing: 14px;
 	--transition-duration: 250ms;
 }
+
 /* Hide the header */
 #header {
 	height: 10px !important;
@@ -13,15 +14,18 @@
 	box-shadow: none !important;
 	cursor: grab !important;
 }
+
 #header * {
 	display: none !important;
 }
+
 /* tab bar settings */
 .tabbar-wrapper {
 	position: relative !important;
 	background-color: var(--colorBg) !important;
 	width: var(--tabbar-width) !important;
 }
+
 .tabbar-wrapper .tabbar-wrapper {
 	z-index: 190 !important;
 	transition: all var(--transition-duration) ease !important;
@@ -30,25 +34,28 @@
 	background-color: var(--colorBg) !important;
 	border-radius: 10px !important;
 }
+
 #tabs-tabbar-container.left {
 	position: relative !important;
 	z-index: 200 !important;
-	margin: 0 5px !important;
 	transition: all var(--transition-duration) ease !important;
 	width: calc(var(--tabbar-width) - 18px) !important;
-	padding: 10px 5px !important;
+	padding: 10px !important;
 	border-radius: 10px !important;
 }
-.tabbar-wrapper .tabbar-wrapper:hover #tabs-tabbar-container.left {
+
+#tabs-tabbar-container.left:hover {
 	width: var(--tabbar-width-expanded) !important;
-	margin: 0 !important;
+	padding: 10px 5px !important;
 	background-color: var(--colorAccentBgAlphaHeavy) !important;
 	box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.25), 0 4px 6px -4px rgb(0 0 0 / 0.25);
 }
+
 .tabbar-wrapper .tabbar-wrapper:hover {
 	/* add padding from inner tabbar */
 	width: calc(var(--tabbar-width-expanded) + 10px) !important;
 }
+
 /* new tab button */
 .button-toolbar.newtab {
 	position: relative !important;
@@ -57,23 +64,30 @@
 	left: 3px !important;
 	width: 31px !important;
 }
+
 .button-toolbar.newtab:hover {
 	background-color: var(--colorAccentBgAlphaHeavy) !important;
 	color: var(--colorAccentFg) !important;
 }
-.tabbar-wrapper .tabbar-wrapper:hover .button-toolbar.newtab {
+
+#tabs-tabbar-container.left:hover .button-toolbar.newtab {
 	width: 244px !important;
 }
+
 .ToolbarButton-Button {
 	color: var(--colorFg) !important;
 }
-/* tab stack hover highlight */
+
+/* tab stack accordion hover highlight */
 .tab-position.accordion-toggle-arrow {
 	color: var(--colorFg) !important;
+	background-color: transparent !important;
 }
+
 .tab-position.accordion-toggle-arrow:hover {
 	background-color: var(--colorAccentBgAlphaHeavy) !important;
 }
+
 /* workspace settings */
 .tabbar-workspace-button {
 	box-shadow: none !important;
@@ -82,53 +96,66 @@
 	width: var(--tabbar-width) !important;
 	padding: 3px !important;
 }
+
 .ToolbarButtonPopup-DefaultStyles {
 	z-index: 220 !important;
 }
-.tabbar-workspace-button ~ #tabs-tabbar-container > .SlideBar--FullHeight {
+
+.tabbar-workspace-button~#tabs-tabbar-container>.SlideBar--FullHeight {
 	top: 0 !important;
 }
+
 .separator {
 	display: none !important;
 }
+
 /* rounded and padded viewport */
 #webview-container {
 	padding: 0 5px 10px !important;
 	background-color: var(--colorBg) !important;
 }
+
 .fullscreen #webview-container {
 	padding: 0 !important;
 }
+
 #webpage-stack {
 	border-radius: 10px !important;
 	border: 1px solid var(--colorAccentBg) !important;
 }
+
 /* panel style */
 #panels-container {
 	border: none !important;
 	background-color: var(--colorBg) !important;
 }
+
 /* tab styling*/
 .tab {
 	background-color: var(--colorBg) !important;
 	transition: all var(--transition-duration) ease !important;
 	color: var(--colorFg) !important;
 }
-.tabbar-wrapper .tabbar-wrapper:hover .tab {
+
+#tabs-tabbar-container.left:hover .tab {
 	background-color: transparent !important;
 	width: calc(var(--tabbar-width-expanded) - 10px) !important;
 }
-.tabbar-wrapper .tabbar-wrapper:hover .tab:hover {
+
+#tabs-tabbar-container.left:hover .tab:hover {
 	background-color: var(--colorAccentBgAlphaHeavy) !important;
 }
+
 .tab.active {
 	background-color: var(--colorAccentBg) !important;
 	color: var(--colorAccentFg) !important;
 }
-.tabbar-wrapper .tabbar-wrapper:hover .tab.active {
+
+#tabs-tabbar-container.left:hover .tab.active {
 	background-color: var(--colorAccentBg) !important;
 	color: var(--colorAccentFg) !important;
 }
+
 /* Remove tab mute icon */
 #tabs-container .tab.tab-small.audio-on .tab-audio,
 #tabs-container .tab.pinned.audio-on .tab-audio,
